--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -22,6 +22,10 @@ section {
     background: #fff;
 }
 
+section h1 {
+    font-size: 200%;
+}
+
 a {
     color: #90c;
     text-decoration: none;
@@ -59,6 +63,7 @@ nav ul li {
 nav ul li a {
     padding: 0 5px;
     font-weight: bold;
+    color: #09c;
 }
 
 nav ul li a:visited {
